# json-to-dags

./: .dockerignore  .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/examples/advanced/: demo_comprehensive_quality_v1.py  demo_event_driven_pipeline_v1.py  demo_spark_multi_cluster_v1.py
dags/examples/beginner/: demo_data_quality_basics_v1.py  demo_notification_basics_v1.py  demo_simple_extract_load_v1.py
dags/factory/: config_validator.py  dag_builder.py  operator_registry.py
docker/airflow/: Dockerfile
docker/warehouse/: Dockerfile  docker-entrypoint-wrapper.sh  run_migrations.sh
docs/: TESTING.md  dags_troubleshooting.md
docs/adr/: 001-airflow-version-downgrade.md  AIRFLOW_3_MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  README.md  airflow3_issues_and_migration.md  architecture.md  migration_plan.md
docs/cicd/: ci_cd_pipeline.md  ci_cd_setup.md
docs/development/: DEVELOPMENT_SETUP_FIXES.md  DockerCMDs_for_troubleshooting.md  SESSION_SUMMARY.md  development.md  phase3_testing_summary.md
docs/project/: QUICK_START_DEV.md  dag_configuration.md  dag_examples_catalog.md  operator_guide.md  retry_and_failure_handling.md  scheduler_stability_fixes.md
docs/testing/: dags_issues.md  docker_issues.md  src_issues.md  testing_in_docker.md  useless_tests.md
specs/001-build-a-full/: quickstart.md
src/hooks/: spark_hook.py  warehouse_hook.py
src/operators/notifications/: base_notification.py  email_operator.py
src/operators/quality/: base_quality_operator.py  completeness_checker.py  freshness_checker.py  null_rate_checker.py  schema_validator.py  uniqueness_checker.py
src/operators/spark/: kubernetes_operator.py  standalone_operator.py  yarn_operator.py
src/spark_apps/: sales_aggregation.py  word_count.py
src/utils/: config_loader.py  data_generator.py  great_expectations_helper.py  logger.py  notification_templates.py  retry_policies.py  timeout_handler.py
src/warehouse/: schema.sql  seed_data.sql
src/warehouse/migrations/: 001_initial_schema.sql  002_etl_metadata_schema.sql  003_source_schema.sql  004_scd_type2_tables.sql
tests/integration/: test_ci_workflow.py  test_dag_hotreload.py  test_dag_idempotency.py  test_dag_parsing.py  test_docker_environment.py  test_dynamic_dag_execution.py  test_environment_reset.py  test_example_dags.py  test_failure_handling.py  test_quality_detection.py  test_retry_behavior.py
tests/unit/test_dag_factory/: test_config_validator.py  test_operator_registry.py
